basic layout of homepage/nav

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kontakt</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
+  <script src="./bower_components/semantic-ui/dist/semantic.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="./bower_components/semantic-ui/dist/semantic.min.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="ui">
+    <div class="ui image" id="rolodex"></div>
+  <div class="ui container">
+    <h1 class="ui horizontal header divider">Kontakt</h1>
+    <div class="ui horizontal divider"></div>
+
+    <div class="ui fluid three item menu">
+      <a class="blue active item">Categories</a>
+      <a class="item">Add New Category</a>
+      <a class="item">About</a>
+    </div>
+  </div>
   
+
+
+<script src="./main.js"></script>
 </body>
 </html>
