--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,28 @@
   <div class="ui container">
     <h1 class="ui horizontal header divider">Kontakt</h1>
     <div class="ui horizontal divider"></div>
-
+    <!-- start nav -->
     <div class="ui fluid three item menu">
-      <a class="blue active item">Categories</a>
-      <a class="item">Add New Category</a>
-      <a class="item">About</a>
+      <a class="blue active item"><i class="tags icon"></i>Categories</a>
+      <a class="item"><i class="write icon"></i>Add New Category</a>
+      <a class="item"><i class="info icon"></i>About</a>
     </div>
+    <!-- end nav -->
+    <div class="ui categories-container">
+      <div class="ui blue inverted piled segment">
+      <h4 class="ui header">Family</h4>
+      <h5 class="ui header">27 Contacts</h5>
+      </div>
+      <div class="ui red inverted piled segment">
+        <h4 class="ui header">Work</h4>
+        <h5 class="ui header">12 Contacts</h5>
+      </div>
+      <div class="ui green inverted piled segment">
+        <h4 class="ui header">College</h4>
+        <h5 class="ui header">39 Contacts</h5>
+    </div> 
+    </div>   
+
   </div>
   
 
