--- a/public/index.html
+++ b/public/index.html
@@ -13,47 +13,46 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body class="ui">
-    <div class="ui image" id="rolodex"></div>
+  <div class="ui image" id="rolodex"></div>
   <div class="ui container">
     <h1 class="ui horizontal header divider">Kontakt</h1>
     <div class="ui horizontal divider"></div>
     <!-- start nav -->
     <div class="ui fluid three item menu">
-      <a class="blue active item"><i class="tags icon"></i>Categories</a>
+      <a class="blue active item all-cats"><i class="tags icon"></i>Categories</a>
       <a class="item new-cat"><i class="write icon"></i>Add New Category</a>
-      <a class="item"><i class="info icon"></i>About</a>
+      <a class="item about" href="#/about"><i class="info icon"></i>About</a>
     </div>
     <!-- end nav -->
 
     <div class="ui small modal">
-  <i class="close icon"></i>
-  <div class="header">
-    Add New Category
-  </div>
-  <div class="content">
-    <div class="ui small image">
-      <i class="tasks icon"></i>
+      <i class="close icon"></i>
+      <div class="header">
+        Add New Category
+      </div>
+      <div class="content">
+        <div class="ui small image">
+          <i class="tasks icon"></i>
+        </div>
+        <div class="description">
+          <div class="ui form">
+            <div class="inline field">
+              <label>Name</label>
+              <input type="text" placeholder="Category Name">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="actions">
+        <div class="ui red button">
+          Cancel
+        </div>
+        <div class="ui positive right labeled icon button">
+          Save
+          <i class="checkmark icon"></i>
+        </div>
+      </div>
     </div>
-    <div class="description">
-      <div class="ui form">
-    <div class="inline field">
-      <label>Name</label>
-      <input type="text" placeholder="Category Name">
-    </div>
-</div>
-      
-    </div>
-  </div>
-  <div class="actions">
-    <div class="ui red button">
-      Cancel
-    </div>
-    <div class="ui positive right labeled icon button">
-      Save
-      <i class="checkmark icon"></i>
-    </div>
-  </div>
-</div>
 
     <!-- begin category blocks -->
     <div class="ui categories-container">
@@ -77,7 +76,7 @@
 
   </div>
   
-
 <script src="./main.js"></script>
+<script src="./router.js"></script>
 </body>
 </html>
