--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
           <div class="ui form">
             <div class="inline field">
               <label>Name</label>
-              <input type="text" placeholder="Category Name">
+              <input required type="text" placeholder="Category Name">
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
 
     <!-- begin category blocks -->
     <div class="ui categories-container">
-      <div class="ui blue inverted piled segment">
+      <!-- <div class="ui blue inverted piled segment">
         <h4 class="ui header">All Contacts</h4>
         <h5 class="ui header">94 Contacts</h5>
       </div>
@@ -71,7 +71,7 @@
       <div class="ui green inverted piled segment">
         <h4 class="ui header">College</h4>
         <h5 class="ui header">39 Contacts</h5>
-    </div> 
+      </div>  -->
     </div>   
 
   </div>
