adding new categories working, and page automatically refreshes

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
         </div>
       </div>
       <div class="actions">
-        <div class="ui red button">
+        <div data-action='cancel' class="ui red button">
           Cancel
         </div>
-        <div class="ui positive right labeled icon button">
+        <div data-action="save" class="ui positive right labeled icon button">
           Save
           <i class="checkmark icon"></i>
         </div>
