updating a contact's info now working

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
   <script src="./bower_components/semantic-ui/dist/semantic.min.js"></script>
   <script src="https://rawgit.com/flatiron/director/master/build/director.min.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.8.0/lodash.min.js'></script>
   <link href='http://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./bower_components/semantic-ui/dist/semantic.min.css">
   <link rel="stylesheet" href="./style.css">
@@ -19,7 +20,7 @@
     <div class="ui horizontal divider"></div>
     <!-- start nav -->
     <div class="ui fluid three item menu">
-      <a class="blue active item all-cats"><i class="tags icon"></i>Categories</a>
+      <a class="blue active item all-cats" href="#/categories"><i class="tags icon"></i>Categories</a>
       <a class="item new-cat"><i class="write icon"></i>Add New Category</a>
       <a class="item about" href="#/about"><i class="info icon"></i>About</a>
     </div>
