adding wireframe sketch

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.8.0/lodash.min.js'></script>
   <link href='http://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./bower_components/semantic-ui/dist/semantic.min.css">
+  <link rel="stylesheet" href="./animate.css">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body class="ui">
